media/css/zamboni/developers.css
/*clearfix*/
.brform:after,
#status-bar:after,
#addon-validator-suite .tiers:after,
form.select-review:after {
    content: ".";
    display: block;
    clear: both;
    height: 0;
    visibility: hidden;
}
/* @group Edit addon */
.devhub-form .label,
.devhub-form th label {
    margin-right:5px;
}

#edit-addon .edit-addon-section {
    margin-bottom:3em;
}

#edit-addon h3 a {
    font-size: 11px;
}

#edit-addon h3:first-child {
    margin-top: 0;
}

.devhub-form .item {
    background-color: #FFFFFF;
    background-position: left bottom;
    background-repeat: repeat-x;
    clear: both;
    position: relative;
    border: 1px solid #C9E8F3;
    margin: 0 0 1em;
    -moz-border-radius: 8px;
    -webkit-border-radius: 8px;
    border-radius: 8px;
}

.devhub-form .listing-footer {
    -moz-border-radius: 0 0 8px 8px;
    -webkit-border-radius: 0 0 8px 8px;
    border-radius: 0 0 8px 8px;
    border-top: 1px solid #C9E8F3;
    padding: 9px;
}

.devhub-form .item_wrapper {
    padding: 5px 13px;
}

.devhub-form table {
    margin: 0;
    width: 100%;
}

.devhub-form table th {
    width: 130px;
    vertical-align: top;
    padding: 8px 20px 8px 0;
    border-top: 1px dotted #ADD0DC;
}

.devhub-form table td {
    padding: 8px 0;
    border-top: 1px dotted #ADD0DC;
}

.devhub-form table, .devhub-form tbody {
    border-top: medium none;
    border-bottom: medium none;
}

.devhub-form table tr:first-child td,
.devhub-form table tr:first-child th {
    border-top: medium none;
}

.devhub-form table .screenshot.thumbnail {
    width: 100px;
    height: 75px;
}


.devhub-form .tip,
a.remove {
    -moz-border-radius: 20px;
    -webkit-border-radius :20px;
    border-radius: 20px;
    background-color: #DDDDDD;
    color: white;
    display: inline-block;
    font-size: 14px;
    font-weight: bold;
    height: 18px;
    line-height: 1.3em;
    margin-top: 0;
    text-align: center;
    text-decoration :none;
    width: 18px;
}
.devhub-form .tip {
    vertical-align: top;
}
a.remove {
    cursor: pointer;
    line-height: 16px;
    float: right;
    margin-top: 2px;
}

.devhub-form .author:hover .remove,
tr:hover a.remove,
.devhub-form tr:hover .tip,
.devhub-form tr:hover .remove {
    background-color: #CCC;
}

.devhub-form tr:hover .tip:hover,
.devhub-form .author .remove:hover {
    background-color: #2A4364;
    cursor: help;
}

.devhub-form tr:hover .remove:hover,
tr:hover a.remove:hover {
    background-color: #2A4364;
}

.devhub-form .empty {
    color: #999;
    font-style: italic;
}

ul.refinements:last-child {
    border-bottom-width: 0;
    margin-bottom: 0;
    padding-bottom: 0;
}

#trans-tags input,
#trans-name input {
    width: 80%;
}

#submit-describe #trans-name {
    display: inline-block;
    margin-right: 15px;
    width: 375px;
}

#submit-describe #trans-name input {
    width: 370px;
}

/*#id_homepage, #id_support_url, #id_support_email {*/
#trans-support_email input,
#trans-homepage input,
#trans-support_url input {
    width: 60%;
}

#slug_edit span, #id_slug {
  font-family: Verdana !important;
  /** This is so they match up size-wise **/
}

#slug_edit a {
    font-size: 10px;
}

.word-count {
    float: right;
}

.html-rtl .word-count {
    float: left;
}

.devhub-form label {
    font-weight: normal;
}
.devhub-form th label {
    font-weight: bold;
    display: inline-block;
}
span.locale{
    font-weight: normal;
    font-size: .9em;
    color: #888;
    display: block;
}

#addon_categories_edit li {
    float: left;
    width: 250px;
}

#addon_description,
#developer_comments {
    max-height: 6.4em;
    overflow: hidden;
}

.edit-addon-details {
    padding-top: 3px;
    font-size: 0.8em;
    color: #555;
}

.edit-media-details {
    padding-bottom: 5px;
    padding-top: 3px;
    font-size: 0.9em;
    color: #444;
}

.edit-media-details .tip {
    font-size: 12px;
    height: 16px;
    width: 16px;
}

#edit-icon-error {
    color: red;
}

#icons_default {
    border: 1px solid #6A89AC;
    max-height: 86px;
    overflow-x: hidden;
    overflow-y: scroll;
    padding: 5px;
    background-color: #fff;
}

#icon_preview_readonly img {
    margin-right: 20px;
}

#icon_preview {
    float: right;
    margin-left: 10px;
    width: 76px;
}

#icon_preview .icon_preview {
    border: 1px solid #6A89AC;
    text-align: center;
    padding: 5px;
    background-color: #fff;
}

#icon_preview .icon_preview img {
    vertical-align: middle;
}

#icon_preview_32 {
    line-height: 32px;
    width: 32px;
    height: 32px;
}

#icon_preview_32 img {
    max-width: 32px;
    max-height: 32px;
}

#icon_preview_48 {
    line-height: 48px;
    width: 48px;
    height: 48px;
}

#icon_preview_48 img {
    max-width: 48px;
    max-height: 48px;
}

#icon_preview_64 {
    line-height: 64px;
    width: 64px;
    height: 64px;
}

#icon_preview_64 img {
    max-width: 64px;
    max-height: 64px;
}

#icons_default label {
    display: none;
}

#icons_default li {
    display: inline-block;
}

#icons_default li.hide {
    display: none;
}

#icons_default li a {
    padding:8px;
    display:block;
    -moz-border-radius: 3px;
}

#icons_default li a:hover {
    background-color:#eee;
}

#icons_default li a img {
    display: block;
}

#icons_default li a.active {
    border: 1px solid #CADBFA;
    background-color: #E8F0FD;
    padding: 7px;
}

/* @end */

/* @group Version Compatibility */

.compat-update-modal {
    min-height: 425px;
}
.compat-update-modal > :first-child {
    margin-top: 0;
}
.compat-update-modal > :last-child {
    margin-bottom: 0;
}

.compat-versions table {
    width: 100%;
}
.compat-versions tbody {
    border: 1px solid #000;
    border-width: 1px 0;
}
.compat-versions thead th {
    color: #888;
}
.compat-versions tbody tr:not(:last-child) {
    border-bottom: 1px dotted #a5bfce;
}

.compat-versions td.app,
.new-apps a.app {
    font-weight: bold;
    min-height: 24px;
    padding-left: 35px;
}
/* ... */

